--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+content="width=device-width,
+initial-scale=1.0">
+<title>APRENDER HTML</title>
+</head>
+<body>
+   <h1>BEM VINDO AO MEU SITE!</h1>
+   <p>ESTE SITE FOI CRIADO USANDO HTML</p>
+</body>
+</html>
+<link rel="stylesheet" href="style.css">
